Migration to Kotlin